# couse-expert-version

./: .gitignore  CMakeLists.txt  Circle.h  ConsoleApplication2.vcxproj  ConsoleApplication2.vcxproj.filters  Line.h  Point.h  Polygon.h  ShapeSet.h  geometric_object.h  linesegment.h  snape.h
